syntax = "proto3";

package scheduler;

service SchedulerService {
  rpc Publish (PublishInput) returns (PublishResponse);
  rpc Cancel (CancelInput) returns (CancelResponse);
}

message PublishInput {
  string priceTableId = 1;
  int64 deliver_at = 2;
  PublishInputActionEnum action = 3;
}

message PublishResponse {
  bool success = 1;
  string message = 2;
}

message CancelInput {
  string priceTableId = 1;
  PublishInputActionEnum action = 2;
}

message CancelResponse {
  bool success = 1;
  string message = 2;
}

enum PublishInputActionEnum {
  UNKNOWN = 0;
  start = 1;
  end = 2;
}
